samples/_failures_safe/1761452026_4b332f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_508bcb74.c: In function ‘main’:
./samples/SAFE/__tmp_508bcb74.c:188:5: error: expected expression at end of input
  188 |     if (
      |     ^~
./samples/SAFE/__tmp_508bcb74.c:188:5: error: expected declaration or statement at end of input
